Enhance GPU Maxent Model and Performance Monitoring
- Implemented GpuMaxentModel as a wrapper for OpenNLP's MaxentModel to enable GPU acceleration for model evaluation, with fallbacks to CPU when necessary. Added detailed documentation for requirements, inputs, outputs, and failure modes.
- Updated GpuMaxentTrainer to check GPU availability correctly using GpuConfig.
- Revamped GpuPerformanceMonitor to provide comprehensive performance metrics, including operation timing, memory usage, and alerts for slow operations and high memory usage. Added structured logging and improved thread safety.
- Introduced GpuDiagnostics tool for comprehensive environment checks, ensuring GPU drivers and SDKs are correctly installed and configured. Enhanced output reporting for better user feedback.
- Removed unused LoggingEventAware interface to clean up the codebase.